--- a/EasyTableCtr/Main.storyboard
+++ b/EasyTableCtr/Main.storyboard
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7DQ-1r-rTi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7DQ-1r-rTi">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment version="2048" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--EasyTable-->
+        <!--TableViewCtr-->
         <scene sceneID="gS9-Un-E2t">
             <objects>
                 <tableViewController id="lDO-0d-Ifi" customClass="ViewController" sceneMemberID="viewController">
@@ -32,11 +32,29 @@
                             <outlet property="delegate" destination="lDO-0d-Ifi" id="dDM-Am-VNV"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="EasyTable" id="pHP-tZ-hWs"/>
+                    <navigationItem key="navigationItem" title="TableViewCtr" id="pHP-tZ-hWs"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AeF-dl-7ym" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1183" y="91"/>
+            <point key="canvasLocation" x="1364" y="-333"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="ieQ-jD-JA1">
+            <objects>
+                <viewController id="IwW-Nm-nHY" customClass="SecondViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WHk-HQ-ibl"/>
+                        <viewControllerLayoutGuide type="bottom" id="jlz-pj-v7g"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lNb-iQ-Auj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2If-Do-Z7g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1364" y="383"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ke3-Od-hJ0">
@@ -67,17 +85,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1jy-Bk-wRv">
-                                <rect key="frame" x="170.5" y="318.5" width="34" height="30"/>
-                                <state key="normal" title="push"/>
+                                <rect key="frame" x="124.5" y="318.5" width="126" height="30"/>
+                                <state key="normal" title="push tableViewCtr"/>
                                 <connections>
                                     <segue destination="lDO-0d-Ifi" kind="show" id="zyl-aV-9Dd"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVx-H4-ypD">
+                                <rect key="frame" x="135" y="381" width="105" height="30"/>
+                                <state key="normal" title="push tableView"/>
+                                <connections>
+                                    <segue destination="IwW-Nm-nHY" kind="show" id="f4m-j4-7hB"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="1jy-Bk-wRv" firstAttribute="centerX" secondItem="akd-u1-rnc" secondAttribute="centerX" id="KjJ-1j-GzF"/>
+                            <constraint firstItem="lVx-H4-ypD" firstAttribute="top" secondItem="1jy-Bk-wRv" secondAttribute="bottom" constant="32.5" id="Svt-UB-rLj"/>
                             <constraint firstItem="1jy-Bk-wRv" firstAttribute="centerY" secondItem="akd-u1-rnc" secondAttribute="centerY" id="oU1-qK-zDm"/>
+                            <constraint firstItem="lVx-H4-ypD" firstAttribute="centerX" secondItem="1jy-Bk-wRv" secondAttribute="centerX" id="tSh-eA-Pnk"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Root" id="wcG-E1-NmH"/>
